--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "com.gsr.homo_textmeshpro",
-  "displayName": "HomoTextMeshPro",
+  "name": "com.unity.textmeshprofixed",
+  "displayName": "TextMeshProFixed",
   "version": "0.0.1",
   "unity": "2020.1",
   "unityRelease": "0a10",
   "description": "The TMP that fixed GC-Problem. Based on version 3.0.6.",
   "keywords": [
-    "GSR",
-    "Homo",
     "TextMeshPro",
     "TextMesh Pro",
     "TMP",
@@ -19,7 +17,7 @@
     "com.unity.ugui": "1.0.0"
   },
   "repository": {
-    "url": "https://github.cds.internal.unity3d.com/unity/com.gsr.homo_textmeshpro.git",
+    "url": "https://github.cds.internal.unity3d.com/unity/com.unity.textmeshpro.git",
     "type": "git",
     "revision": "01e57e3b7de18af9dfe9baaa0a0ff5cc4765c899"
   }
