--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "com.unity.ugui": "1.0.0"
   },
   "repository": {
-    "url": "https://github.com/Giresharu/TextMeshPro_GCProblem_Fixed",
+    "url": "https://github.com/Giresharu/TextMeshPro_GCProblem_Fixed.git",
     "type": "git",
   }
 }
